<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/OnboardStyle">

    <com.aemerse.onboard.internal.OnboardViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="false"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_separator"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/onboard_separator_color"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/onboard_bottombar_height"
        android:background="@color/onboard_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skip"
        style="@style/Onboard2ButtonStyleCompat"
        android:contentDescription="@string/onboard_skip_button"
        android:text="Skip"
        android:textAllCaps="false"
        android:textColor="#D9D9D9"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_onboard_fab_skip" />

    <ImageButton
        android:id="@+id/back"
        style="@style/OnboardButtonStyleCompat"
        android:contentDescription="@string/onboard_back_button"
        android:rotation="180"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom"
        app:srcCompat="@drawable/ic_onboard_next" />

    <FrameLayout
        android:id="@+id/indicator_container"
        style="@style/OnboardIndicatorContainer"
        android:layout_marginBottom="34dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@drawable/ic_onboard_indicator"
        tools:targetApi="jelly_bean_mr1" />

    <ImageButton
        android:id="@+id/next"
        style="@style/OnboardButtonStyleCompat"
        android:contentDescription="@string/onboard_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom"
        app:srcCompat="@drawable/ic_onboard_next" />

    <Button
        android:id="@+id/done"
        style="@style/OnboardButtonStyleCompat"
        android:background="@drawable/drawable_btn_done"
        android:labelFor="@string/onboard_done_button"
        android:text="@string/onboard_done_button"
        android:textColor="@color/onboard_icon_tint"
        android:textSize="@dimen/onboard_donetext_size"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
