<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/OnboardStyle">

    <LinearLayout
        android:id="@+id/onboard_loading_ads_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="false"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading_ads_text"
            android:textColor="#000000" />
    </LinearLayout>

    <com.aemerse.onboard.internal.OnboardViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="false"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/onboard2_bottombar_height"
        android:background="@color/onboard_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back"
        style="@style/Onboard2ButtonStyleCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/onboard_back_button"
        android:rotation="180"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_onboard_fab_next" />

    <FrameLayout
        android:id="@+id/indicator_container"
        style="@style/OnboardIndicatorContainer"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_55sdp"
        tools:background="@drawable/ic_onboard_indicator"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/next"
        style="@style/OnboardButtonStyleCompat"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:contentDescription="@string/onboard_next_button"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textColor="@color/white"
        android:background="@drawable/ic_btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/onboard_next_button"
        app:layout_constraintTop_toTopOf="@+id/bottom" />

    <TextView
        android:id="@+id/done"
        style="@style/OnboardButtonStyleCompat"
        android:layout_marginEnd="@dimen/_18sdp"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/ic_get_started"
        android:contentDescription="@string/onboard_next_button"
        android:text="@string/onboard_done_button"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom"/>

    <TextView
        android:id="@+id/skip"
        style="@style/Onboard2ButtonStyleCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/onboard_skip_button"
        android:text="@string/onboard_skip_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/next"
        app:srcCompat="@drawable/ic_onboard_fab_skip" />

<!--        <TextView-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/bottom"-->
<!--            android:textColor="#ffffff"-->
<!--            android:id="@+id/next"-->
<!--            android:text="@string/onboard_next_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:background="@drawable/drawable_btn_done"-->
<!--            android:paddingHorizontal="@dimen/_38sdp"-->
<!--            android:paddingVertical="@dimen/_10sdp"-->
<!--            android:layout_marginEnd="@dimen/_18sdp"-->
<!--            android:layout_height="wrap_content"/>-->

<!--        <TextView-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/bottom"-->
<!--            android:textColor="#ffffff"-->
<!--            android:id="@+id/done"-->
<!--            android:text="@string/onboard_done_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:background="@drawable/drawable_btn_done"-->
<!--            android:paddingHorizontal="@dimen/_38sdp"-->
<!--            android:paddingVertical="@dimen/_10sdp"-->
<!--            android:layout_marginEnd="@dimen/_18sdp"-->
<!--            android:layout_height="wrap_content"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>
